...

import { Icon } from './Icon'

export function Screen({
  title,
  children,
  leading = 'menu',
  onBack,
  rightAction,
  scroll = true,
  contentStyle,
}: {
  title: string
...
